Created and added a new Compass-logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:200|Poiret+One' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <header>
@@ -15,7 +14,7 @@
         <ul class="left">
           <li><a href="#top">Samuel Plumppu</a></li>
         </ul>
-        <img src="images/compass.png" alt="compass-logo">
+        <a href="#top"><img src="images/compass.svg" alt="compass-logo"></a>
 
 
         <ul class="right">
@@ -54,6 +53,8 @@
           where we build 5 full stack JavaScript apps using <a href="http://www.meteor.com"target="_blank">Meteor</a>. Check them out down below!
         </p>
         <p>My other big interest is to practice orienteering, which I do almost on a daily basis.</p>
+
+        <!-- TODO: finish this text -->
       </div>
     </section>
 
@@ -62,6 +63,7 @@
         <h2>Projects</h2>
         <hr>
 
+        <!-- TODO: add showcase funcitonality -->
         <!-- comment: Maybe add some kind of showcase here
         use js to modify css (visibility: hidden) of items
         to only show current active item in showcase
