Added content to contact-section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:200|Poiret+One' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
+    <script src="script.js" charset="utf-8"></script>
   </head>
   <body>
     <header>
@@ -110,16 +111,13 @@
       <div class="content">
         <h2>Contact</h2>
         <hr>
-        <!-- include bootstrap font-awesome-library for link svgs -->
-
         <h3>
           Interested in hiring me? Don't hesitate to get in touch!
         </h3>
-        <p>
-          <a href="https://www.github.com/Greenheart">Github</a>
-          Email?
-          LinkedIn?
-        </p>
+        <div class="social-links">
+          <a href="https://www.github.com/Greenheart" target="_blank"><img src="images/github-mark-white.svg" alt="github-mark"></a>
+          <a href="http://www.freecodecamp.com/Greenheart" target="_blank"><img src="images/freecodecamp-puck.svg" alt="freecodecamp-logo"></a>
+        </div>
       </div>
     </section>
 
