Created a simple project slider with a crossfading-effect

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
 
-          <div class="project spotlight">
+          <div class="project">
             <div class="display">
               <img src="images/goa-space-survival.png" alt="Goa Space Survival">
               <div class="arrow arrow-prev"></div>
@@ -155,6 +155,7 @@
                 <ul class="tech-list">
                   <li>Meteor</li>
                   <li>Mongo DB</li>
+                  <li>Phaser</li>
                 </ul>
               </div>
             </div>
