--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           I have been programming regularly since late 2013 using Python. So far, I have built some cool games which you can find out more about down below.
           In June 2015 I found the great site <a href="http://www.freecodecamp.com"target="_blank">freeCodeCamp</a> which I use to learn full stack JavaScript development.
           My personal goal is to finish the site's curriculum and be job-ready by autumn 2016.
-          During the autumn of 2015 I started on a project together with my friend <a href="https://www.github.com/Catagen"target="_blank">Szymon</a>
+          During the autumn of 2015 I started on a project together with my friend <a href="https://github.com/Catagen"target="_blank">Szymon</a>
           where we build 5 full stack JavaScript apps using <a href="http://www.meteor.com"target="_blank">Meteor</a>. Check them out down below!
         </p>
         <p>My other big interest is to practice orienteering, which I do almost on a daily basis.</p>
@@ -70,7 +70,9 @@
 
           <div class="project">
             <div class="display">
-              <img src="images/achtung_intense_battle_wow_2.png" alt="Intense battle in Achtung Panzer">
+              <a href="https://github.com/greenheart/AchtungPanzer" target="_blank">
+                <img src="images/achtung_intense_battle_wow_2.png" alt="Intense battle in Achtung Panzer">
+              </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
             </div>
@@ -79,14 +81,21 @@
 
             <div class="project-info">
               <div class="project-description">
-                <h3><a href="https://www.github.com/greenheart/AchtungPanzer">Achtung Panzer</a></h3>
+                <h3><a href="https://github.com/greenheart/AchtungPanzer" target="_blank">Achtung Panzer</a></h3>
                 <p>
                   An intense 2D tank battle for two players on the same computer.
-                  Including two different ammo-types with game world with randomly generated terrain and destroyable world-objects
+                  Including two different ammo-types (long-range/small damage main cannon and short-range/high damage grenade launcher)
+                  which together with the randomly generated terrain, slowing world-objects like water and destroyable world-objects like stones
+                  results in a pretty neat little action-game where strategy and timing is crucial to crush your opponent.
+                </p>
+                <p>
+                  This was a project I did together with <a href="https://github.com/greenheart/AchtungPanzer#creators" target="_blank">some friends</a>
+                  for a programming class in school. It was my first real project
+                  using Git and even though we used a Git-GUI, I learned pretty much about soure control.
                 </p>
               </div>
               <div class="project-tech">
-                <h3>Technologies Used</h3>
+                <h3>Technologies</h3>
                 <ul class="tech-list">
                   <li>Python 2.7</li>
                   <li>PyGame</li>
@@ -101,7 +110,9 @@
 
           <div class="project">
             <div class="display">
-              <img src="images/meteor-tic-tac-toe.png" alt="The GUI of Tic Tac Toe">
+              <a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank">
+                <img src="images/meteor-tic-tac-toe.png" alt="The GUI of Tic Tac Toe">
+              </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
             </div>
@@ -110,9 +121,9 @@
 
             <div class="project-info">
               <div class="project-description">
-                <h3><a href="https://www.github.com/Catagen/Meteor-TicTacToe" target="_blank">Meteor Tic Tac Toe</a></h3>
+                <h3><a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank">Meteor Tic Tac Toe</a></h3>
                 <p>
-                  A simple game built together with <a href="https://www.github.com/Catagen"target="_blank">Szymon</a>
+                  A simple game built together with <a href="https://github.com/Catagen"target="_blank">Szymon</a>
                   to learn the basics of the Meteor Platform.
                   An interesting feature we implemented was the Room-system that enables several players to
                   play at the same time and join simply by entering a room's number
@@ -120,7 +131,7 @@
               </div>
 
               <div class="project-tech">
-                <h3>Technologies Used</h3>
+                <h3>Technologies</h3>
                   <ul class="tech-list">
                     <li>Meteor</li>
                     <li>Mongo DB</li>
@@ -135,7 +146,9 @@
 
           <div class="project">
             <div class="display">
-              <img src="images/goa-space-survival.png" alt="Goa Space Survival">
+              <a href="https://github.com/greenheart/goa-space-survival" target="_blank">
+                <img src="images/goa-space-survival.png" alt="Goa Space Survival">
+              </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
             </div>
@@ -144,18 +157,24 @@
 
             <div class="project-info">
               <div class="project-description">
-                <h3><a href="https://www.github.com/greenheart/goa-space-survival" target="_blank">Goa Space Survival</a></h3>
+                <h3><a href="https://github.com/greenheart/goa-space-survival" target="_blank">Goa Space Survival</a></h3>
                 <p>
-                  A space-survival game created with Meteor and Phaser.
+                  A space-survival game created with Phaser as the game engine and Meteor for the real-time highscores
+                  This project taught me a lot about publishing apps and got me thinking about security issues in a whole other way after several persons cheated.
+                  Knowledge like this will be useful in the future!
+                </p>
+                <p style="font-size: 1.1em;">
+                  A final warning: The simplistic gameplay proved to be quite addictive, so be careful if you try it at
+                  <a href="http://gspace.meteor.com" target="_blank">gspace.meteor.com</a> &#9786;
                 </p>
               </div>
 
               <div class="project-tech">
-                <h3>Technologies Used</h3>
+                <h3>Technologies</h3>
                 <ul class="tech-list">
                   <li>Meteor</li>
-                  <li>Mongo DB</li>
                   <li>Phaser</li>
+                  <li>Mongo DB</li>
                 </ul>
               </div>
             </div>
@@ -170,7 +189,7 @@
       <div class="content">
         <h2>Technologies / Frameworks</h2>
         <hr>
-        <!-- TODO: style and edit these -->
+        <!-- TODO: style and edit these. Maybe use nice images/ svg-icons? -->
         <ul>
           <li>Python</li>
           <li>HTML5</li>
@@ -193,7 +212,7 @@
           Interested in hiring me? Don't hesitate to get in touch!
         </h3>
         <div class="social-links">
-          <a href="https://www.github.com/Greenheart" target="_blank"><img src="images/github-mark-white.svg" alt="github-mark"></a>
+          <a href="https://github.com/Greenheart" target="_blank"><img src="images/github-mark-white.svg" alt="github-mark"></a>
           <a href="http://www.freecodecamp.com/Greenheart" target="_blank"><img src="images/freecodecamp-puck.svg" alt="freecodecamp-logo"></a>
         </div>
       </div>
