Added outline for another project in showcase

--- a/index.html
+++ b/index.html
@@ -145,7 +145,34 @@
           </div><!-- project -->
 
 
+          <div class="project">
+            <div class="display">
+              <a href="">
+                <img src="" alt="">
+              </a>
+                <div class="arrow arrow-prev"></div>
+                <div class="arrow arrow-next"></div>
+            </div>
 
+            <hr>
+
+            <div class="project-info">
+              <div class="project-description">
+                <h3><a href="">The not so busy business</a></h3>
+                <p>
+                  A text-adventure game written in python. Really fun to create and loads of
+                  good practice to get fundamental programming concepts in place.
+                  <!-- TODO: Add img, link and better description. Also upload to github -->
+                </p>
+              </div>
+              <div class="project-tech">
+                <h3>Technologies</h3>
+                <ul class="tech-list">
+                  <li>Python 2.7</li>
+                </ul>
+              </div>
+            </div>
+          </div>
 
 
           <div class="project">
