Small fixes for compass-icon, default project in showcase and an icon added to the contact-links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <li><a href="#top">Samuel Plumppu</a></li>
         </ul>
         <a href="#top"><img src="images/compass.svg" alt="compass-logo"></a>
-        <!-- TODO: fix image height -->
 
         <ul class="right">
           <li><a href="#about">About</a></li>
@@ -234,6 +233,7 @@
                 * Display skill-levels as bars to give an overview of how poficient I'm with different technologies
       -->
         <p>These are technologies I use regularly and am comfortable working with</p>
+        <!-- TODO: maybe change this to "tech. i use comfrtably and tech i'm currently learning" -->
         <div class="skills-wrapper">
           <div class="col">
             <div class="skill">
@@ -292,6 +292,7 @@
         </div><!--// skills wrapper -->
       </div><!--// content -->
     </section>
+    <!-- TODO: maybe change jpeg images to svg format to save size and quality -->
 
 
     <section id="contact">
@@ -302,6 +303,7 @@
           Interested in hiring me? Don't hesitate to get in touch!
         </h3>
         <div class="social-links">
+          <a href="http://gitter.im/greenheart"><img src="images/gitter-icon.svg" alt="Gitter Logo"></a>
           <a href="https://github.com/Greenheart" target="_blank"><img src="images/github-mark-white.svg" alt="github-mark"></a>
           <a href="http://www.freecodecamp.com/Greenheart" target="_blank"><img src="images/freecodecamp-puck.svg" alt="freecodecamp-logo"></a>
         </div>
