Update project descriptions
* Update screenshot for GSS
* Remove dead link for GSS
* Add correct Python-versions used for other projects

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="project-tech">
                 <h3>Technologies</h3>
                 <ul class="tech-list">
-                  <li>Python 2.7</li>
+                  <li>Python 3</li>
                   <li>PyGame</li>
                 </ul>
               </div>
@@ -167,7 +167,7 @@
               <div class="project-tech">
                 <h3>Technologies</h3>
                 <ul class="tech-list">
-                  <li>Python 2.7</li>
+                  <li>Python 3</li>
                 </ul>
               </div>
             </div>
@@ -177,7 +177,7 @@
           <div class="project">
             <div class="display">
               <a href="https://github.com/greenheart/goa-space-survival" target="_blank" rel="noopener noreferrer">
-                <img src="images/goa-space-survival.png" alt="Goa Space Survival">
+                <img src="images/goa-space-survival-2.png" alt="Goa Space Survival">
               </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
@@ -200,8 +200,7 @@
                   Knowledge like this will be useful in the future!
                 </p>
                 <p style="font-size: 1.1em;">
-                  A final warning: The simplistic gameplay proved to be quite addictive, so be careful if you try it at
-                  <a href="http://gspace.meteor.com" target="_blank" rel="noopener noreferrer">gspace.meteor.com</a> &#9786;
+                  A final warning: The simplistic gameplay proved to be quite addictive, so be careful if you try it... &#9786;
                 </p>
               </div>
 
