--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                   Since the development went so smooth, I decided to also implement the highscores to make the game more interesting.
                 </p>
                 <p>
-                  This project taught me about publishing apps and also gave me insights to some of the security issues
+                  This project taught me about publishing apps and gave me insights to some of the security issues
                   that arises if you trust clients too much.
                   Knowledge like this will be useful in the future!
                 </p>
@@ -299,13 +299,14 @@
         <h2>Contact</h2>
         <hr>
         <h3>
-          Interested in hiring me? Don't hesitate to get in touch!
+          Interested in working with me? Don't hesitate to <a href="mailto:samuel.plumppu@gmail.com">get in touch!</a>
         </h3>
         <div class="social-links">
-          <a href="https://gitter.im/greenheart" target="_blank" rel="noopener noreferrer"><img src="images/gitter-icon.svg" alt="Gitter Logo"></a>
           <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/github-mark-white.svg" alt="GitHub Logo"></a>
+          <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/gitter-icon.svg" alt="Gitter Logo"></a>
+          <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer"><img src="images/medium-logo.png" alt="Medium Logo" /></a>
           <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/freecodecamp-puck.svg" alt="Free Code Camp Logo"></a>
-          <a href="https://medium.com/@greenheart" target="_blank" rel="noopener noreferrer"><img src="images/medium-logo.png" alt="Medium Logo" /></a>
+          <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/codepen-logo.svg" alt="CodePen Logo"></a>
         </div>
       </div>
     </section>
