Update FCC Logo to newest version

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/github-mark-white.svg" alt="GitHub Logo"></a>
           <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/gitter-icon.svg" alt="Gitter Logo"></a>
           <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer"><img src="images/medium-logo.png" alt="Medium Logo" /></a>
-          <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/freecodecamp-puck.svg" alt="Free Code Camp Logo"></a>
+          <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/fcc-puck-green.svg" alt="Free Code Camp Logo"></a>
           <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/codepen-logo.svg" alt="CodePen Logo"></a>
         </div>
       </div>
