--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="skill">
               <h4>Python</h4>
               <div class="bar">
-                <div style="width: 50%;"></div>
+                <div style="width: 60%;"></div>
               </div>
             </div>
             <div class="skill">
@@ -256,7 +256,7 @@
             <div class="skill">
               <h4>Git</h4>
               <div class="bar">
-                <div style="width: 40%;"></div>
+                <div style="width: 60%;"></div>
               </div>
             </div>
           </div><!--// col -->
@@ -265,7 +265,7 @@
             <div class="skill">
               <h4>JavaScript</h4>
               <div class="bar">
-                <div style="width: 60%;"></div>
+                <div style="width: 80%;"></div>
               </div>
             </div>
             <div class="skill">
@@ -286,12 +286,17 @@
                 <div style="width: 40%;"></div>
               </div>
             </div>
+            <div class="skill">
+              <h4>Node.js</h4>
+              <div class="bar">
+                <div style="width: 20%;"></div>
+              </div>
+            </div>
           </div><!--// col -->
 
         </div><!--// skills wrapper -->
       </div><!--// content -->
     </section>
-    <!-- TODO: maybe change jpeg images to svg format to save size and quality -->
 
 
     <section id="contact">
