Remove unused images & update alt-attributes.
Update all imgs' alt-attributes to improve code readability.
Also replace gitter-icon.svg that didn't work on mobile with a new .png.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="left">
           <li><a href="#top">Samuel Plumppu</a></li>
         </ul>
-        <a href="#top"><img src="images/compass.svg" alt="compass-logo"></a>
+        <a href="#top"><img alt="compass-logo" src="images/compass.svg"></a>
 
         <ul class="right">
           <li><a href="#about">About</a></li>
@@ -46,7 +46,7 @@
       <div class="content">
         <h2>About me</h2>
         <hr>
-        <img src="images/samuel.jpg">
+        <img alt="Samuel Plumppu" src="images/samuel.jpg">
 
         <div id="about-text">
         <p>
@@ -80,7 +80,7 @@
           <div class="project">
             <div class="display">
               <a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">
-                <img src="images/achtung_intense_battle_wow_2.png" alt="Intense battle in Achtung Panzer">
+                <img alt="Intense battle in Achtung Panzer" src="images/achtung_intense_battle_wow_2.png">
               </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
@@ -120,7 +120,7 @@
           <div class="project">
             <div class="display">
               <a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">
-                <img src="images/meteor-tic-tac-toe.png" alt="The GUI of Tic Tac Toe">
+                <img alt="The GUI of Tic Tac Toe" src="images/meteor-tic-tac-toe.png">
               </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
@@ -153,7 +153,7 @@
           <div class="project">
             <div class="display">
               <a href="">
-                <img src="" alt="">
+                <img alt="" src="">
               </a>
                 <div class="arrow arrow-prev"></div>
                 <div class="arrow arrow-next"></div>
@@ -183,7 +183,7 @@
           <div class="project">
             <div class="display">
               <a href="https://github.com/greenheart/goa-space-survival" target="_blank" rel="noopener noreferrer">
-                <img src="images/goa-space-survival-2.png" alt="Goa Space Survival">
+                <img alt="Goa Space Survival" src="images/goa-space-survival-2.png">
               </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
@@ -313,11 +313,11 @@
           Interested in working with me? Don't hesitate to <a href="mailto:samuel.plumppu@gmail.com">get in touch!</a>
         </h3>
         <div class="social-links">
-          <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/github-mark-white.svg" alt="GitHub Logo"></a>
-          <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/gitter-icon.svg" alt="Gitter Logo"></a>
-          <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer"><img src="images/medium-logo.png" alt="Medium Logo" /></a>
-          <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/fcc-puck-green.svg" alt="Free Code Camp Logo"></a>
-          <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer"><img src="images/codepen-logo.svg" alt="CodePen Logo"></a>
+          <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="GitHub Logo" src="images/github-mark-white.svg"></a>
+          <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="Gitter Logo" src="images/gitter-logo.png"></a>
+          <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer"><img alt="Medium Logo" src="images/medium-logo.png"></a>
+          <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="Free Code Camp Logo" src="images/fcc-puck-green.svg"></a>
+          <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="CodePen Logo" src="images/codepen-logo.svg"></a>
         </div>
       </div>
     </section>
